--- a/test.yml
+++ b/test.yml
@@ -6,7 +6,7 @@
     virtualbox:
       node_ip: '172.16.77.19'
       username: vbox
-      password: '#SDtBnJuUBeQa4GJq!Zhw8EVLQatsk'
+      password: '123455'
     register: test_success_out
   
   - name: Debug the test_success_out
@@ -28,7 +28,7 @@
   #   vbox:
   #     node_ip: '172.16.77.19'
   #     username: vbox
-  #     password: '#SDtBnJuUBeQa4GJq!Zhw8EVLQatsk'
+  #     password: '123455'
   #   register: test_fail_success
   #   ignore_errors: true
   
